--- a/Nummy.CodeLogger.csproj
+++ b/Nummy.CodeLogger.csproj
@@ -5,15 +5,15 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-        <Title>.NET Core library for log http request and responses in your application.</Title>
+        <Title>.NET Core library for logging in your application.</Title>
         <AnalysisLevel>none</AnalysisLevel>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageIcon>icon.png</PackageIcon>
-        <Version>1.0.4</Version>
-        <Description>Request &amp; Response logging in your application. </Description>
+        <Version>1.0.0</Version>
+        <Description>Logging in your application.</Description>
         <Copyright>SolarVoyager 2023</Copyright>
-        <RepositoryUrl>https://github.com/solarvoyager/Nummy.HttpLogger</RepositoryUrl>
+        <RepositoryUrl>https://github.com/solarvoyager/Nummy.CodeLogger</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="README.md" Pack="true" PackagePath=""/>
+        <None Include="README.md" Pack="True" PackagePath="\"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -40,7 +40,6 @@
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
         </None>
-
     </ItemGroup>
 
 
